--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-node_modules
+# Next.js build files
+.next/
+
+# Node modules
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Env files
+.env
+.env.local
